fixed a bug with SVG width on recent Chrome browsers + externalized data to separate more data and logic + added alternative views of the same data + more detailed README

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+This project provides a fast "database free" way to update a burndown chart
+
 The PHP could of course use classes and the like, this is far from clean.
 
 All variables are defined in the $sprint array.
@@ -12,3 +14,19 @@ All variables are defined in the $sprint array.
 Two projections are displaying the following:
 * a global projection: sprint status based on the average points burned since the start of the sprint;
 * a local projection:  sprint status based on the points burned during the last day.
+
+
+# Usage
+
+* Every day, you can update the file data.php to reflect points burned, User Story points removed and bugs fixing time;
+* If you don't want to differentiate points and User Story points, you can remove things related to User Story points;
+* If the sprint is unusualy long, the legends might not look really good. You can add the class ".long_sprint" to the "#grid" element.
+* Since you might have multiple sprints, you can move "common.css" to an other folder and refer to it accordingly
+
+
+
+# Alternate views
+
+* "burndown_chart_success.php" shows the sprint as if it was successful.
+* "burndown_chart_added_hours.php" shows the cumulative hours spent on bug fixing and burned hours. This can explain how much work was globally done, even if the sprint is unsuccessful.
+* "burndown_chart_embed.php" is an work in progress to show how a table could be used by the SVG with JS. You'll need to update the header of the SVG file for this to work. (Just add "/*" where necessary)
